Implemented file binding from document attributes

--- a/resources/templates/monografia/elementos/pre-textuais/capa.tex
+++ b/resources/templates/monografia/elementos/pre-textuais/capa.tex
@@ -8,13 +8,13 @@
 % \departamento{}
 
 % DADOS DO TRABALHO--------------------------------------------------------------------------------------
-\titulo{{titulo}}
-\subtitulo{{subtitulo}}
-\titleabstract{{titleabstract}}
-\autor{{autor}}
-\autorcitacao{{autorcitacao}} % Sobrenome em maiúsculo
-\local{{local}}
-\data{{data}}
+\titulo{!/titulo!}
+\subtitulo{!/subtitulo!}
+\titleabstract{!/titleabstract!}
+\autor{!/autor!}
+\autorcitacao{!/autorcitacao!} % Sobrenome em maiúsculo
+\local{!/local!}
+\data{!/data!}
 
 % NATUREZA DO TRABALHO-----------------------------------------------------------------------------------
 % Opções: 
