--- a/resources/templates/monografia/elementos/pre-textuais/agradecimentos.tex
+++ b/resources/templates/monografia/elementos/pre-textuais/agradecimentos.tex
@@ -2,8 +2,6 @@
 
 \begin{agradecimentos}[Agradecimentos]
 
-Edite e coloque aqui os agradecimentos às pessoas e/ou instituições que contribuíram para a realização do trabalho.
-
-É obrigatório o agradecimento às instituições de fomento à pesquisa que financiaram total ou parcialmente o trabalho, inclusive no que diz respeito à concessão de bolsas.
+!/agradecimentos!
 
 \end{agradecimentos}
