New model class was created to represent a document; Changes in "monografia" template.

--- a/resources/templates/monografia/elementos/pre-textuais/abstract.tex
+++ b/resources/templates/monografia/elementos/pre-textuais/abstract.tex
@@ -7,9 +7,9 @@
 \imprimirautorcitacao. \imprimirtitleabstract. \imprimirdata. \pageref {LastPage} f. \imprimirprojeto\ – \imprimirprograma, \imprimirinstituicao. \imprimirlocal, \imprimirdata.\\
 %---------------------------------------------------------------------------------------
 
-!/abstractX!
+!\abstractX!
 
-\textbf{Keywords}: !/keywords!
+\textbf{Keywords}: !\keywords!
 
 \end{SingleSpacing}
 \end{resumo}
