--- a/resources/templates/monografia/elementos/pre-textuais/ficha-catalografica.tex
+++ b/resources/templates/monografia/elementos/pre-textuais/ficha-catalografica.tex
@@ -35,13 +35,7 @@
 	\imprimirdata.}\\
 	
 	\hspace{0.5cm}
-		1. \LaTeX.
-		2. Editor WYSIWYG.
-		2. Linguagens de marcação.
-		I. Orientador.
-		II. Universidade xxx.
-		III. Faculdade de xxx.
-		IV. Título 			
+		!\palavraschave!
 	\end{minipage}}
 	\end{center}
 \end{fichacatalografica}
