--- a/resources/templates/monografia/elementos/pre-textuais/resumo.tex
+++ b/resources/templates/monografia/elementos/pre-textuais/resumo.tex
@@ -7,9 +7,9 @@
 \imprimirautorcitacao. \imprimirtitulo. \imprimirdata. \pageref {LastPage} f. \imprimirprojeto\ – \imprimirprograma, \imprimirinstituicao. \imprimirlocal, \imprimirdata.\\
 %---------------------------------------------------------------------------------------
 
-!/resumo!
+!\resumo!
 
-\textbf{Palavras-chave}: !/palavraschave!
+\textbf{Palavras-chave}: !\palavraschave!
 
 \end{SingleSpacing}
 \end{resumo}
