--- a/resources/templates/monografia/elementos/pre-textuais/capa.tex
+++ b/resources/templates/monografia/elementos/pre-textuais/capa.tex
@@ -8,13 +8,13 @@
 % \departamento{}
 
 % DADOS DO TRABALHO--------------------------------------------------------------------------------------
-\titulo{!/titulo!}
-\subtitulo{!/subtitulo!}
-\titleabstract{!/titleabstract!}
-\autor{!/autor!}
-\autorcitacao{!/autorcitacao!} % Sobrenome em maiúsculo
-\local{!/local!}
-\data{!/data!}
+!\titulo{}!
+!\subtitulo{}!
+!\titleabstract{}!
+!\autor{}!
+!\autorcitacao{}! % Sobrenome em maiúsculo
+!\local{}!
+!\data{}!
 
 % NATUREZA DO TRABALHO-----------------------------------------------------------------------------------
 % Opções: 
@@ -22,7 +22,7 @@
 % - Dissertação (se for Mestrado)
 % - Tese (se for Doutorado)
 % - Projeto de Qualificação (se for Mestrado ou Doutorado)
-\projeto{{projeto}}
+!\projeto{}!
 
 % TÍTULO ACADÊMICO---------------------------------------------------------------------------------------
 % Opções:
@@ -30,35 +30,35 @@
 % - Mestre (Se a natureza for Dissertação)
 % - Doutor (Se a natureza for Tese)
 % - Mestre ou Doutor (Se a natureza for Projeto de Qualificação)
-\tituloAcademico{{tituloAcademico}}
+!\tituloAcademico{}!
 
 % ÁREA DE CONCENTRAÇÃO E LINHA DE PESQUISA---------------------------------------------------------------
 % Se a natureza for Trabalho de Conclusão de Curso, deixe ambos os campos vazios
 % Se for programa de Pós-graduação, indique a área de concentração e a linha de pesquisa
-\areaconcentracao{{areaconcentracao}}
-\linhapesquisa{{linhapesquisa}}
+!\areaconcentracao{}!
+!\linhapesquisa{}!
 
 % DADOS DA INSTITUIÇÃO-----------------------------------------------------------------------------------
 % Se a natureza for Trabalho de Conclusão de Curso, coloque o nome do curso de graduação em "programa"
-% Formato para o logo da Instituição: \logoinstituicao{<escala>}{<caminho/nome do arquivo>}
-\instituicao{{instituicao}}
+!\instituicao{}!
 
-\newcommand\instituicaosigla{{instituicaosigla}}
-\newcommand\instituicaocampus{{instituicaocampus}}
-%\departamento{}
-\programa{{programa}}
+!\newcommand\instituicaosigla{}!
+!\newcommand\instituicaocampus{}!
+!\departamento{}!
+!\programa{}!
 
 %\newcommand\programanivel{Nível Técnico}
-\newcommand\programanivel{{programanivel}}
+!\newcommand\programanivel{}!
 %\newcommand\programanivel{Nível de Pós-graduação}
 %\newcommand\programanivel{Nível de Mestrado}
 %\newcommand\programanivel{Nível de Doutorado}
 
 % DADOS DOS ORIENTADORES---------------------------------------------------------------------------------
-\orientador{Prof. {orientador}}
+!\orientador{}!
 %\orientador[Orientadora:]{Nome da orientadora}
-%\instOrientador{Instituição do orientador}
 
-\coorientador{Prof. {coorientador}}
+!\coorientador{}!
 %\coorientador[Coorientadora:]{Nome da coorientadora}
-%\instCoorientador{Instituição do coorientador}
+
+
+
