--- a/resources/templates/monografia/elementos/pre-textuais/folha-aprovacao.tex
+++ b/resources/templates/monografia/elementos/pre-textuais/folha-aprovacao.tex
@@ -31,7 +31,7 @@
     \vspace*{\fill}
    \end{center}
         
-   Trabalho aprovado. \imprimirlocal, 28 de Junho de 2019:
+   Trabalho aprovado. \imprimirlocal, !\dataporextenso!:
 
    \assinatura{\textbf{\imprimirorientador} \\ Orientador} 
    \assinatura{\textbf{\imprimircoorientador} \\ Coorientador} 
